# Cloud_devops_agent

./: .gitignore  main.py  pyproject.toml  requirements.txt
backend/: Readme.md
backend/adapters/: adapters.py
backend/config/: llm.py
backend/graph/: basic_graph.py  supervisor_node.py
backend/mcp_server/: server.py
backend/mcp_server/clients/: aws_client.py
backend/mcp_server/tools/cloudwatch/: schema.py  tools.py
backend/mcp_server/tools/ec2/: schema.py  tools.py
backend/mcp_server/tools/ecs/: schema.py  tools.py
backend/mcp_server/tools/s3/: schema.py  tools.py
backend/models/: state.py
frontend/frontend/: README.md
frontend/vite-project/: README.md  package-lock.json
infra/: Readme.md
infra/docker/: backend.DockerFile
tests/: test_mcp_adapter.py
