[project]
name = "cloud-devops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.6",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "fastmcp>=3.2.4",
    "langchain>=1.2.17",
    "langchain-aws>=1.4.6",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.10",
    "mcp>=1.27.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.46.0",
]
